# rust-todo-list

./: Cargo.toml  README.md  test_api.sh  todo.db-shm  todo.db-wal
src/: database.rs  error.rs  main.rs
src/handlers/: mod.rs  task_handler.rs
src/models/: task.rs
src/repositories/: task_repository.rs
src/routes/: mod.rs  task_routes.rs
src/services/: task_service.rs
static/: index.html
