[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
# 在 [dependencies] 下添加
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7" # error.rs 中用到了 axum::response
# 在 [dependencies] 下添加
uuid = { version = "1.0", features = ["v4", "serde"] }
[dev-dependencies]
# 暂时留空
